Use .bundle/config for bundler environment Fix bug in URL notation (Windows)